# monkey2

./: CMakeLists.txt  README.md
src/: assetmanager.cpp  assetmanager.h  batch.cpp  batch.h  bounds.cpp  bounds.h  camera.cpp  camera.h  collisionengine.cpp  collisionengine.h  component.h  directionallight.cpp  directionallight.h  error.cpp  error.h  font.cpp  font.h  functions.cpp  functions.h  game.cpp  game.h  geometry.cpp  geometry.h  hashpair.h  indexedpng.cpp  indexedpng.h  keylistener.cpp  keylistener.h  light.h  linebatch.cpp  linebatch.h  linemodel.cpp  linemodel.h  main.cpp  model.cpp  model.h  mouselistener.cpp  mouselistener.h  multisprite.cpp  multisprite.h  (+36 more)
src/actions/: animate.cpp  animate.h  callfunc.cpp  callfunc.h  delay.cpp  delay.h  move.cpp  move.h  waitclick.cpp  waitclick.h  walk.cpp  walk.h
src/adventure/: mousecontroller.cpp  mousecontroller.h  obstacle.cpp  obstacle.h  walkablecharacter.cpp  walkablecharacter.h  walkarea.cpp  walkarea.h
src/agi/: agiobject.cpp  agiobject.h  agiroom.cpp  agiroom.h  agiview.h  prioritysheet.cpp  prioritysheet.h  words.cpp  words.h
src/components/: baseline.h  camcontrol3d.cpp  camcontrol3d.h  collider.cpp  collider.h  controller.cpp  controller.h  cursor.h  depthscale.cpp  depthscale.h  follow.cpp  follow.h  hotspot.cpp  hotspot.h  keyboard.cpp  keyboard.h  npc.cpp  npc.h
src/glsl/: agi_pic.fs  blit.fs  color.fs  color.vs  colorlight.fs  colorlight.vs  glsl.h  skeletal.fs  skeletal.vs  tex.fs  tex.vs  texpal.fs
src/models/: linemodel.cpp  linemodel.h  quad.cpp  quad.h  tilemodel.cpp  tilemodel.h  treemodel.cpp  treemodel.h
src/platformer/: playercontroller.cpp  playercontroller.h  tile.cpp  tile.h  tilecollider.cpp  tilecollider.h  tilecontroller.cpp  tilecontroller.h  tileworld.cpp  tileworld.h
src/primitives/: prim.cpp  prim.h  vertex.h
src/shapes/: aabb.cpp  aabb.h  intersection.cpp  intersection.h  line.cpp  line.h  point.cpp  point.h  polyapprox.cpp  polyapprox.h  polygon.cpp  polygon.h  rect.cpp  rect.h
src/skeletal/: keyframe.cpp  (+10 more)
